--- a/service.html
+++ b/service.html
@@ -428,7 +428,7 @@
 
                 <div class="till-container">
                     <div class="till-label">Till Number</div>
-                    <div class="till-number" id="till-number">8067532</div>
+                    <div class="till-number" id="till-number">8595952</div>
                     <button class="btn-copy" id="copy-till-btn">
                         <i class="far fa-copy"></i> Copy Till
                     </button>
@@ -535,7 +535,7 @@
             const message = document.getElementById('mpesa-message').value.trim();
             const feeAmount = parseInt(loanData.processing_fee);
             const expectedFee = `Ksh ${feeAmount.toLocaleString('en-KE')}`;
-            const expectedTillName = 'PesaPata Loans';
+            const expectedTillName = 'Quicklink Solutions';
 
             if (!message) {
                 Swal.fire({
